# cpu_info

./: Cargo.toml
assets/: index.html
src/: main.rs
