[package]
name = "cpu_info"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.5"
axum = "0.6.12"
futures-util = "0.3.28"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
sysinfo = "0.28.4"
tokio = { version = "1.27.0", features = ["full"] }
tokio-stream = "0.1.12"
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
tracing = "0.1.37"
